--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,93 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 3fr 1fr 3fr;
+  margin: 92px 24px;
+  max-height: 92px;
+  align-items: center;
+}
+
+
+.header__menu {
+  text-decoration: none;
+}
+
+
+.header__links-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header__links-list-item {
+  list-style: circle;
+  text-transform: lowercase;
+}
+
+.header__links-list-item_no-bullet {
+  list-style: none;
+}
+
+.header__link {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+.header__link_active {
+  border-bottom: 0;
+}
+
+
+.header__logo {
+}
+
+.contacts {
+  padding-left: 45%;
+  padding-right: 10%;
+}
+
+.address {
+  /* TODO: сбросить стиль браузера */
+}
+
+.main {
+
+}
+
+.cover {
+  background-image: url("../images/cover.jpg");
+  background-color: #b5b3b3;
+}
+
+.overlay {
+  background-color: black;
+  opacity: 0.5;
+}
+
+.cover__title {
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase;
+}
+
+.cover__description {
+
+}
+
+.cover__description-text {
+  text-transform: uppercase;
+}
+
+.bet-button {
+  text-transform: uppercase;
+}
+
+
+.lots {
+  background-color: deepskyblue;
+}
+
+.about {
+  background-color: palegoldenrod;
+}
+
+.footer {
+}
