--- a/styles/style.css
+++ b/styles/style.css
@@ -53,23 +53,62 @@
 }
 
 .cover {
-  background-image: url("../images/cover.jpg");
-  background-color: #b5b3b3;
+  display: flex;
+  color: white;
+  background-color: red;
+  background-image: url("../../ono-tebe-nado/images/cover.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 0;
+  position: relative;
+  height: 757px;
+
 }
 
 .overlay {
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgb(0 0 0 / 0.5);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 
 .cover__title {
   font-weight: 700;
   font-size: 100px;
+
+  z-index: 2;
+  position: relative;
+  align-items: center;
+  margin: 165px 50px;
+  letter-spacing: 0.4em;
+}
+
+.aligned-text {
+  display: block;
   text-transform: uppercase;
 }
 
-.cover__description {
+.last_button {
+  margin-left: 30px;
+}
 
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 62px 78px;
+  font-weight: 400;
+  font-size: 22px;
+  word-spacing: 0.6em;
 }
 
 .cover__description-text {
@@ -77,7 +116,13 @@
 }
 
 .bet-button {
+  color: white;
   text-transform: uppercase;
+  font-weight: 500;
+  font-size: 22px;
+  border: 1px solid white;
+  background: none;
+  height: 51px;
 }
 
 
