--- a/styles/style.css
+++ b/styles/style.css
@@ -211,8 +211,84 @@
 
 
 .about {
-  background-color: palegoldenrod;
+  margin-top: 146px;
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  height: 563px;
+}
+
+.about__column {
+  margin-top: 136px;
+}
+
+.about__logo {
+  display: flex;
+  background-color: black;
+  height: 240px;
+  width: 240px;
+  border-radius: 50%;
+  justify-self: center;
+  margin: 35px;
+}
+
+.about__logo-image {
+  justify-self: center;
+  align-self: center;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  margin-top: 100px;
 }
 
 .footer {
+  display: grid;
+  gap: 185px;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 180px;
+  margin-bottom: 88px;
+}
+
+.footer__menu {}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__menu-list-item {
+  list-style: none;
+  text-transform: lowercase;
+}
+
+.footer__menu-link {
+  border-bottom: 1px solid black;
+}
+
+.footer__menu-link_active {
+  border-bottom: 0 solid transparent;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social-list-item {
+  list-style: none;
+}
+
+.footer__social-link {}
+
+.footer__social-icon {
+  height: 48px;
+  width: 48px;
 }
