--- a/styles/style.css
+++ b/styles/style.css
@@ -82,9 +82,9 @@
   z-index: 2;
   position: relative;
   align-items: center;
-  margin: 165px 50px;
+  margin: 165px 50px 0;
   letter-spacing: 0.32em;
-  line-height: 1.22em;
+  line-height: 1.225em;
 }
 
 .aligned-text {
@@ -112,10 +112,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 62px 78px;
+  margin: 127px 48px 0;
   font-weight: 400;
   font-size: 22px;
-  word-spacing: 0.6em;
+  word-spacing: 0.8em;
+  text-indent: 1.5em;
 }
 
 .cover__description-text {
