--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .cover__title {
@@ -154,11 +155,10 @@
 
 .lots__card-list-item {
   color: white;
-  background-color: red;
   flex-grow: 1;
   height: 563px;
   width: 334px;
-  margin: 16px 0;
+  margin-top: 16px;
 }
 
 .card-link {
@@ -170,7 +170,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 27px;
   height: 100%;
 }
 
@@ -193,7 +192,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-
+  margin-bottom: 30px;
 }
 
 .card__title {
