--- a/styles/style.css
+++ b/styles/style.css
@@ -284,6 +284,7 @@
 }
 
 .footer__menu-link_active {
+  /* TODO убрать text-decoration */
   text-decoration: none;
   border-bottom: 0 solid transparent;
 }
