--- a/styles/style.css
+++ b/styles/style.css
@@ -246,6 +246,9 @@
 }
 
 .about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
   font-weight: 400;
   font-size: 20px;
   margin-top: 100px;
