--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .header {
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
+  grid-template-columns: 1fr auto 1fr;
   margin: 92px 24px;
   max-height: 92px;
   align-items: center;
