--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@
 .cover {
   display: flex;
   color: white;
-  background-image: url("../../ono-tebe-nado/images/cover.jpg");
+  background-image: url("../images/cover.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -175,15 +175,15 @@
 }
 
 .card_type_film {
-  background-image: url("../../ono-tebe-nado/images/card-lot-01.jpg");
+  background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
-  background-image: url("../../ono-tebe-nado/images/card-lot-02.jpg");
+  background-image: url("../images/card-lot-02.jpg");
 }
 
 .card_type_picture {
-  background-image: url("../../ono-tebe-nado/images/card-lot-03.jpg");
+  background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__title {
