--- a/styles/style.css
+++ b/styles/style.css
@@ -79,8 +79,8 @@
   position: relative;
   align-items: center;
   margin: 165px 50px 0;
-  letter-spacing: 0.32em;
-  line-height: 1.225em;
+  letter-spacing: 0.3em;
+  line-height: 1.15;
 }
 
 .aligned-text {
