--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,7 @@
 
 .cover {
   display: flex;
+  flex-direction: column;
   color: white;
   background-image: url("../images/cover.jpg");
   background-size: cover;
@@ -66,9 +67,8 @@
 .overlay {
   background-color: rgb(0 0 0 / 0.6);
   z-index: 1;
-  width: 100%;
-  height: 100%;
-  position: relative;
+  position: absolute;
+  inset: 0
 }
 
 .cover__title {
@@ -109,6 +109,7 @@
   font-size: 22px;
   word-spacing: 0.8em;
   text-indent: 1.5em;
+  z-index: 2;
 }
 
 .cover__description-text {
@@ -166,6 +167,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  z-index: 0;
+  position: relative;
 }
 
 .card_type_film {
@@ -186,12 +189,14 @@
   text-transform: uppercase;
   padding: 51px 40px 0;
   text-decoration: underline;
+  z-index: 2;
 }
 
 .card__text {
   font-weight: 400;
   font-size: 20px;
   margin: 0 40px 48px;
+  z-index: 2;
 }
 
 .lots__look-more-link {
