--- a/styles/style.css
+++ b/styles/style.css
@@ -74,30 +74,32 @@
 .cover__title {
   font-weight: 700;
   font-size: 100px;
-
   z-index: 2;
   position: relative;
   align-items: center;
   margin: 165px 50px 0;
-  letter-spacing: 0.3em;
-  line-height: 1.15;
   text-transform: uppercase;
+
+  letter-spacing: 0.3em;
+  line-height: 1;
 }
 
 .aligned-text {
   display: block;
-}
-
-.outcast {
-  margin-left: 27px;
-}
-
-.aligned-text_regular-spacing {
+  padding-bottom: 20px;
   letter-spacing: 0.3em;
 }
 
-.aligned-text_shifted-spacing {
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.letter-spacing-extended {
   letter-spacing: 0.6em;
+}
+
+.aligned-text_shifted-line-height {
+  line-height: 1.15;
 }
 
 .aligned-text_center {
@@ -112,7 +114,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 135px 48px 62px;
+  margin: 115px 48px 50px;
   font-weight: 400;
   font-size: 22px;
   word-spacing: 0.8em;
