--- a/styles/style.css
+++ b/styles/style.css
@@ -183,7 +183,7 @@
 .lots__card-list-item {
   color: white;
   flex-grow: 1;
-  height: 563px;
+  min-height: 563px;
   width: 334px;
   margin-top: 16px;
   margin-bottom: 30px;
