--- a/styles/style.css
+++ b/styles/style.css
@@ -262,10 +262,9 @@
 }
 
 .about {
-  margin-top: 146px;
-  display: grid;
-  grid-template-columns: 334px 1fr;
-  height: 563px;
+  margin: 146px 24px 0;
+  display: flex;
+  gap: 24px;
 }
 
 .about__column {
@@ -280,7 +279,7 @@
   border-radius: 50%;
   justify-self: center;
   justify-content: center;
-  margin: 35px;
+  margin: 37px 47px;
 }
 
 .about__logo-image {
@@ -301,6 +300,8 @@
   gap: 24px;
   font-weight: 400;
   font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.01em;
   margin-top: 100px;
 }
 
