--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+/*
+  Посмотрел на объём ссылок, требующих подчёркивания,
+  и всё-таки вытащил правило на уровень тега.
+  html стал читабильнее (имхо)
+*/
+a {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
 .header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -29,12 +39,7 @@
   letter-spacing: 0;
 }
 
-.header__link {
-  text-decoration: none;
-  border-bottom: 1px solid black;
-}
-
-.header__link_active {
+.underline_disabled {
   border-bottom: 0;
 }
 
@@ -45,6 +50,8 @@
 
 .address {
   font-style: normal;
+  line-height: 24.3px;
+  letter-spacing: 0.01em;
 }
 
 .address__text {
@@ -54,8 +61,6 @@
 .header__address {
   justify-self: end;
   max-width: 240px;
-  line-height: 24.3px;
-  letter-spacing: 0.01em;
 }
 
 .cover {
@@ -262,7 +267,7 @@
 }
 
 .about {
-  margin: 146px 24px 0;
+  margin: 147px 24px 0;
   display: flex;
   gap: 24px;
 }
@@ -279,7 +284,7 @@
   border-radius: 50%;
   justify-self: center;
   justify-content: center;
-  margin: 37px 47px;
+  margin: 35px 47px;
 }
 
 .about__logo-image {
@@ -307,17 +312,21 @@
 
 .footer {
   display: grid;
-  gap: 185px;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 180px;
-  margin-bottom: 88px;
+  margin: 180px 50px 88px;
   font-size: 18px;
+}
+
+.footer__address {
+  max-width: 240px;
 }
 
 .footer__menu-list {
   display: flex;
   flex-direction: column;
   align-items: center;
+  line-height: 21.13px;
+  text-align: center;
 }
 
 .footer__menu-list-item {
@@ -325,13 +334,7 @@
   text-transform: lowercase;
 }
 
-.footer__menu-link {
-  text-decoration: none;
-  border-bottom: 1px solid black;
-}
-
 .footer__menu-link_active {
-  /* TODO убрать text-decoration */
   text-decoration: none;
   border-bottom: 0 solid transparent;
 }
@@ -339,6 +342,9 @@
 .footer__social-list {
   display: flex;
   justify-content: space-between;
+  max-width: 240px;
+  gap: 48px;
+  justify-self: end;
 }
 
 .footer__social-list-item {
