--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,10 @@
   letter-spacing: 1.1em;
 }
 
+.word-spacing-extended-light {
+  word-spacing: 0.85em;
+}
+
 .word-spacing-extended {
   word-spacing: 0.82em;
 }
