--- a/styles/style.css
+++ b/styles/style.css
@@ -262,12 +262,13 @@
 
 .about {
   margin: 147px 24px 0;
-  display: flex;
-  gap: 24px;
+  display: grid;
+  grid-template-columns: 334px 1fr;
 }
 
 .about__column {
   margin-top: 136px;
+  margin-left: 25px;
 }
 
 .about__logo {
